[gd_scene load_steps=7 format=3 uid="uid://lieb5rtvgudj"]

[ext_resource type="Script" path="res://user_interface/main_canvas/team_info_menu_group/team_info_menu_group.gd" id="1_iqaa8"]
[ext_resource type="PackedScene" uid="uid://6dikqxysux0p" path="res://user_interface/main_canvas/team_info_menu_group/skill_tree_menu/skill_tree_menu.tscn" id="2_icl2l"]
[ext_resource type="PackedScene" uid="uid://brfpdmoe2l0uu" path="res://user_interface/main_canvas/team_info_menu_group/character_status_menu/character_status_menu.tscn" id="3_sb7mf"]
[ext_resource type="PackedScene" uid="uid://ck3k7agcwa5ps" path="res://user_interface/player_hud_canvas/ui_modules/orb_display.tscn" id="4_67i4h"]

[sub_resource type="ButtonGroup" id="ButtonGroup_jhvd2"]

[sub_resource type="ButtonGroup" id="ButtonGroup_dajsb"]

[node name="TeamInfoMenuGroup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqaa8")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.25098, 0.278431, 0.368627, 1)

[node name="SkillTreeMenu" parent="." instance=ExtResource("2_icl2l")]
visible = false
layout_mode = 1

[node name="CharacterStatusMenu" parent="." instance=ExtResource("3_sb7mf")]
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="SkillTreeButton" type="Button" parent="MarginContainer/VBox/HBox2"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_jhvd2")
text = "Skill Trees"

[node name="StatsButton" type="Button" parent="MarginContainer/VBox/HBox2"]
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_jhvd2")
text = "Character Stats"

[node name="spacer2" type="Control" parent="MarginContainer/VBox/HBox2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="ExitButton" type="Button" parent="MarginContainer/VBox/HBox2"]
unique_name_in_owner = true
layout_mode = 2
text = "Return"
metadata/_edit_use_anchors_ = true

[node name="line" type="ColorRect" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
color = Color(0.431373, 0.431373, 0.431373, 1)

[node name="HBox1" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Char1" type="Button" parent="MarginContainer/VBox/HBox1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(114, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_dajsb")
text = "Knight"
clip_text = true

[node name="Char2" type="Button" parent="MarginContainer/VBox/HBox1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(114, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_dajsb")
text = "Witch"
clip_text = true

[node name="Char3" type="Button" parent="MarginContainer/VBox/HBox1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(114, 0)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_dajsb")
text = "Rogue"
clip_text = true

[node name="spacer" type="Control" parent="MarginContainer/VBox/HBox1"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="OrbDisplay" parent="MarginContainer/VBox/HBox1" instance=ExtResource("4_67i4h")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBox/HBox2/SkillTreeButton" to="." method="_on_skill_trees_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/HBox2/StatsButton" to="." method="_on_character_stats_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/HBox2/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/HBox1/Char1" to="." method="_on_char_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/HBox1/Char2" to="." method="_on_char_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/HBox1/Char3" to="." method="_on_char_3_pressed"]
